tests/integration/snapshots/integration__test_json__valid_fraction.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
98.8
stdout --- 
98.8
stderr --- 
<empty>
