tests/integration/snapshots/integration__test_json__valid_integer.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
298
stdout --- 
298
stderr --- 
<empty>
