tests/integration/snapshots/integration__test_json__valid_negative_fraction.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
-98.123456789
stdout --- 
-98.123456789
stderr --- 
<empty>
